# solana-gossip-tui

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
async/: Cargo.toml
async/src/: connection.rs  errors.rs  handshake.rs  lib.rs
proto/: Cargo.toml
proto/src/: errors.rs  lib.rs  protocol.rs  utils.rs  wire.rs
src/: app.rs  common.rs  lib.rs  logic.rs  main.rs  protocol.rs  stm.rs  terminal.rs  transport.rs  utils.rs
src/stm/: events.rs  state_debug.rs  state_entrypoint_selection.rs  state_help.rs  state_home.rs  state_unknown.rs  stm_main.rs
src/transport/: receiver.rs  sender.rs
src/ui/: core.rs  list_stateful_widget.rs  table_stateful_widget.rs
tui/: Cargo.toml
tui/src/: common.rs  lib.rs  logic.rs  main.rs  terminal.rs  transport.rs  ui.rs  utils.rs
tui/src/stm/: events.rs  state_debug.rs  state_entrypoint_selection.rs  state_help.rs  state_home.rs  state_unknown.rs
tui/src/transport/: receiver.rs  sender.rs
tui/src/ui/: core.rs  table_stateful_widget.rs
