[package]
name = "solana_gossip_async"
version = "0.1.1"
edition = "2021"
authors = ["Luca Ceppelli <ceppelli@gmail.com>"]
description = """
An attempt to reverse engineer the Solana Gossip protocol
"""
readme = "README.md"
license = "MIT"
keywords = [ "solana", "gossip", "blockchain", "cli"]
categories = ["library"]
repository = "https://github.com/ceppelli/solana-gossip-tui"

[dependencies]
thiserror = "1.0"
log = "0.4"
simple_logger = "4.1"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.27", features = ["io-util", "rt-multi-thread", "macros"]}
udpflow = "0.1"
solana-sdk = "1.15"
solana_gossip_proto = { path = "../proto" }

[[bin]]
name = "solana_gossip_async"
path = "src/bin/main_cli.rs"
