[package]
name = "solana_gossip_proto"
version = "0.1.0"
edition = "2021"
authors = ["Luca Ceppelli <ceppelli@gmail.com>"]
description = """
An attempt to reverse engineer the Solana Gossip protocol
"""
readme = "README.md"
license = "MIT"
keywords = [ "solana", "gossip", "blockchain", "tui"]
categories = ["library"]
repository = "https://github.com/ceppelli/solana-gossip-tui"

[dependencies]
solana-sdk = "1.15.1"
solana-bloom = "1.15.1"
serde = "1.0.144"
serde_derive = "1.0.103"
bv = { version = "0.11.1", features = ["serde"] }
bincode = "1.3.3"

